nsg-lockdown/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "nsgName": {
            "type": "string"
        },
        "otherIps": {
            "type": "array",
            "defaultValue": [],
            "metadata": {
                "description": "Enter additional IPs or subnets to permit (i.e. 10.10.10.1, 10.10.10.0/24)"
            }
        }
    },
    "variables": {
        "corpnetSubnets": [
            "131.107.0.0/16",
            "167.220.0.0/23",
            "167.220.100.0/22",
            "167.220.104.0/23",
            "167.220.56.0/21",
            "167.220.98.0/23"
        ]
    },
    "resources": [
        {
          "name": "[concat(parameters('nsgName'),'/ssh-rule')]",
          "apiVersion": "2018-01-01",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
                "description": "Allow SSH inbound",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourcePortRanges": [],
                "sourceAddressPrefixes": "[variables('corpnetSubnets')]",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 120,
                "direction": "Inbound"
            }
        },
        {
            "name": "[concat(parameters('nsgName'),'/rdp-rule')]",
            "apiVersion": "2018-01-01",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
                "description": "Allow RDP inbound",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourcePortRanges": [],
                "sourceAddressPrefixes": "[variables('corpnetSubnets')]",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 121,
                "direction": "Inbound"
            }
        },
        {
          "name": "[concat(parameters('nsgName'),'/powershell-remoting-rule')]",
          "apiVersion": "2018-01-01",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
                "description": "Allow PowerShell remoting inbound",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "5985",
                "sourcePortRanges": [],
                "sourceAddressPrefixes": "[variables('corpnetSubnets')]",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 122,
                "direction": "Inbound"
            }
        },
        {
            "name": "[concat(parameters('nsgName'),'/ssh-lockdown-other')]",
            "condition": "[not(empty(parameters('otherIps')))]",
            "apiVersion": "2018-01-01",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
                "description": "Allow SSH inbound",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourcePortRanges": [],
                "sourceAddressPrefixes": "[parameters('otherIps')]",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 123,
                "direction": "Inbound"
            }
        },
        {
            "name": "[concat(parameters('nsgName'),'/rdp-lockdown-other')]",
            "condition": "[not(empty(parameters('otherIps')))]",
            "apiVersion": "2018-01-01",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
                "description": "Allow RDP inbound",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourcePortRanges": [],
                "sourceAddressPrefixes": "[parameters('otherIps')]",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 124,
                "direction": "Inbound"
            }
        },
        {
          "name": "[concat(parameters('nsgName'),'/powershell-remoting-lockdown-other')]",
          "condition": "[not(empty(parameters('otherIps')))]",
          "apiVersion": "2018-01-01",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
                "description": "Allow PowerShell remoting inbound",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "5985",
                "sourcePortRanges": [],
                "sourceAddressPrefixes": "[parameters('otherIps')]",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 125,
                "direction": "Inbound"
            }
        }
    ],
    "outputs": {}
}
